前端项目初始化

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /SupermarketOnline/.classpath
 /SupermarketOnline/.gradle
 /SupermarketOnline/bin
+/SupermarketOnlineStatic/dist
+/SupermarketOnlineStatic/node_modules
+/SupermarketOnlineStatic/nginx/logs
+/SupermarketOnlineStatic/nginx/temp
